# state-machine

./: Cargo.toml  LICENSE  README.md
benches/: state_machine_benchmark.rs
src/: compose_trait.rs  dyn_trait.rs  external_enum.rs  internal_enum.rs  lib.rs
